change and localize smb file share menu option text

- Changes the option displayed in the files app "add new services menu"
from"SMB Shares" to "SMB file share"

Bug: chromium:887132
Change-Id: I066e36e1ec992dce40971eced993b9aea5a0b7c8
Reviewed-on: https://chromium-review.googlesource.com/1239213
Reviewed-by: Zentaro Kavanagh <zentaro@chromium.org>
Commit-Queue: Bailey Berro <baileyberro@chromium.org>
Cr-Commit-Position: refs/heads/master@{#593602}