chrome/browser/chromeos/smb_client/smb_provider.cc
@@ -13,6 +13,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "chrome/browser/ui/chrome_pages.h"
 #include "chrome/browser/ui/settings_window_manager_chromeos.h"
 #include "chrome/common/webui_url_constants.h"
+#include "chrome/grit/generated_resources.h"
+#include "ui/base/l10n/l10n_util.h"
 #include "url/gurl.h"
 
 namespace chromeos {
@@ -26,7 +28,7 @@ SmbProvider::SmbProvider(UnmountCallback unmount_callback)
                     extensions::SOURCE_NETWORK),
       // TODO(baileyberro): Localize this string, so it shows correctly in all
       // languages. See l10n_util::GetStringUTF8.
-      name_("SMB Shares"),
+      name_(l10n_util::GetStringUTF8(IDS_SMB_SHARES_ADD_SERVICE_MENU_OPTION)),
       unmount_callback_(std::move(unmount_callback)) {
   icon_set_.SetIcon(IconSet::IconSize::SIZE_16x16,
                     GURL("chrome://theme/IDR_SMB_ICON"));
